--- a/style.css
+++ b/style.css
@@ -196,8 +196,13 @@ header .logo {
 }
 .fade-out {
   opacity: 0;
+  transition: opacity 0.3s ease-in-out;
 }
 
+.fade-in {
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out;
+}
 
 /* Destaque oferta do dia */
 .oferta-dia {
