--- a/style.css
+++ b/style.css
@@ -188,19 +188,18 @@ header .logo {
 }
 
 /* Galeria */
+
 #mainImage {
   opacity: 1;
   transition: opacity 0.3s ease-in-out;
 }
 
 .fade-in {
-  opacity: 1;
-  transition: opacity 0.3s ease-in;
+  opacity: 1 !important;
 }
 
 .fade-out {
-  opacity: 0;
-  transition: opacity 0.3s ease-out;
+  opacity: 0 !important;
 }
 
 
