--- a/style.css
+++ b/style.css
@@ -70,19 +70,19 @@ header .logo {
   text-decoration: none;
 }
 
-.cep-bar a,
-.cep-bar p {
-  color: #333;
+.cep-bar {
+  background-color: #ffe600;
+  padding: 10px;
+  text-align: center;
   font-weight: bold;
-  text-decoration: none;
-  display: inline-flex;
-  align-items: center;
-  gap: 6px;
 }
 
-.cep-bar i {
-  color: #3483fa;
+.cep-bar a {
+  color: #000;
+  text-decoration: none;
+  font-size: 16px;
 }
+
 
 /* CONTAINER PRINCIPAL */
 .produto-container {
